--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,8 @@
     "grunt": "~0.4.5",
     "grunt-typescript": "",
     "grunt-contrib-uglify": "~0.10.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "chai": "~3.4.0",
+    "mocha": "~2.3.3"
   }
 }
