--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-uglify": "~0.10.0",
     "grunt-contrib-watch": "~0.6.1",
     "chai": "~3.4.0",
-    "mocha": "~2.3.3"
+    "mocha": "~2.3.3",
+    "grunt-contrib-concat": "~0.5.1"
   }
 }
