--- a/package.json
+++ b/package.json
@@ -17,12 +17,9 @@
   },
   "homepage": "https://github.com/shannonarcher/astar-ts",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-typescript": "",
-    "grunt-contrib-uglify": "~0.10.0",
-    "grunt-contrib-watch": "~0.6.1",
     "chai": "~3.4.0",
     "mocha": "~2.3.3",
-    "grunt-contrib-concat": "~0.5.1"
+    "gulp-uglify": "~1.4.2",
+    "gulp": "~3.9.0"
   }
 }
