--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
-        "out": "../../built/local/tsc.js",
+        "out": "build/astar.js",
         "sourceMap": true
     },
     "exclude": [
