--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chai": "~3.4.0",
     "mocha": "~2.3.3",
     "gulp-uglify": "~1.4.2",
-    "gulp": "~3.9.0"
+    "gulp": "~3.9.0",
+    "gulp-rename": "~1.2.2"
   }
 }
